2002-02-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* expect.man: Changed the paragraph about [exp_continue] to
	  contain information about the flag "-continue_timer". This fixes
	  the bug SF #520630.

	* exp_main_sub.c (Expect_Init): Applied Don Porter's patch which
	  excludes the initialization of Tcl/Expect packages and the
	  creation of the ExitHandler from the 'firsttime' guard. This
	  allows the full use of Expect in slave-iterpreters. This fixes
	  the bug SF #459646.

2002-02-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* expect.man: Changed abbreviation of "-notransfer" from "-n" to
	  "-not". "-n" is no longer unique due to the addition of
	  "-nocase". This fixes the bug SF #514994.

2002-02-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Applied patch for SF #514590 to correct behaviour of expect when
	  expecting and send from and to bogus spawn id's.

	* exp_log.c (expStdoutLogU): Use Tcl_WriteChars/Tcl_Flush instead
	  of 'fwrite' for tcl 8.1 and beyond to enforce correct conversion
	  of the internal UTF/8 into the external representation.

2002-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Resynchronization of SourceForge with Don's sources to Expect
	  version 5.34. The changes are

	  Don Porter <don.porter@nist.gov> provided package-related fixes
	  for test suite.

	  Brian Theado <brian.theado@usa.net> noted that interact's -re
	  support broke when offsets kicked in.  Turned out that the
	  regexp engine supports them during execution but the results are
	  delivered RELATIVE to the offset.  (I suspect this was done
	  due to expediency.)

2001-12-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* exp_inter.c: Applied patch posted by Don libes to c.l.t. on his
	  behalf to keep the SF repository in sync with his changes. Don's
	  notes: I obviously missed the fact that although
	  "Tcl_RegExpExecObj" supports offsets, they aren't delivered to